--- a/EAPS_Data_Preprocess.ipynb
+++ b/EAPS_Data_Preprocess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlQESjIaKqS78nKs/EMEqL",
+      "authorship_tag": "ABX9TyMq1kGNn8W/Rs0+qbm32wUU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8m66y1zpQ4S0",
-        "outputId": "7268cabe-e583-4c27-dcfb-e6fd546081d9"
+        "outputId": "b091289b-b0e8-4d92-da8d-5de47fa4201b"
       },
       "outputs": [
         {
@@ -50,10 +50,46 @@
             "Leave Type                 float64\n",
             "Absent/Present              object\n",
             "Reason                      object\n",
-            "dtype: object\n",
+            "dtype: object\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-10-4b49ce466017>:44: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df['Encoded Reason'] = label_encoder.fit_transform(df['Reason'])\n",
+            "<ipython-input-10-4b49ce466017>:45: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df['Encoded Absent/Present'] = label_encoder.fit_transform(df['Absent/Present'])\n",
+            "<ipython-input-10-4b49ce466017>:46: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df['Encoded Status'] = label_encoder.fit_transform(df['Status'])\n",
+            "<ipython-input-10-4b49ce466017>:47: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df['Encoded Absenteeism Type'] = label_encoder.fit_transform(df['Absenteeism Type'])\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "Column names: Index(['Date', 'Shift', 'Code', 'Absenteeism Type', 'Status', 'Leave Type',\n",
-            "       'Absent/Present', 'Reason', 'Encoded_Reason', 'Encoded_Absent_Present',\n",
-            "       'Encoded_Status', 'Encoded_Absenteeism_Type', 'Encoded_Shift'],\n",
+            "       'Absent/Present', 'Reason', 'Encoded Reason', 'Encoded Absent/Present',\n",
+            "       'Encoded Status', 'Encoded Absenteeism Type', 'Encoded Shift'],\n",
             "      dtype='object')\n",
             "Done\n"
           ]
@@ -69,46 +105,54 @@
         "drive.mount('/content/drive')\n",
         "\n",
         "# Step 1: Read the Data\n",
-        "df = pd.read_excel('/content/drive/MyDrive/DSGP_COURSEWORK/SL Apparel Dataset model/SL Apparel Industry Dataset.xlsx')\n",
+        "df = pd.read_excel('/content/drive/MyDrive/DSGP_COURSEWORK/SL Apparel Dataset model/SL Apparel Industry Dataset.xlsx').apply(lambda x: x.str.strip() if x.dtype == \"object\" else x)\n",
+        "\n",
         "\n",
         "df['Absenteeism Type'] = df['Absenteeism Type'].astype(str)\n",
         "\n",
+        "\n",
         "# Step 2: Filter Rows Based on Reasons\n",
-        "reasons_to_remove = ['Resignation', 'VOP', 'Funeral ', 'Funeral']\n",
+        "reasons_to_remove = ['Resignation', 'VOP', 'Funeral']\n",
         "df = df[~df['Reason'].isin(reasons_to_remove)]\n",
         "\n",
         "# Step 3: Remove Rows with Leave Type 0.5\n",
         "df = df[df['Leave Type'] != 0.5]\n",
+        "\n",
+        "df = df[df['Shift'] != 'A']\n",
+        "df = df[df['Shift'] != 'Shift']\n",
+        "df = df[df['Shift'] != 'Other Teams']\n",
+        "df = df[df['Shift'] != 'Shift e']\n",
+        "\n",
         "\n",
         "# Step 4: Remove Department and Reason Mapping Columns\n",
         "df = df.drop(['Department', 'Reason Mapping'], axis=1)\n",
         "\n",
         "# Step 5: Remove Rows with 'Present' in Absent/Present Column\n",
         "df = df[df['Absent/Present'] != 'Present']\n",
-        "df = df[df['Absent/Present'] != '']\n",
         "\n",
         "# Step 5: Remove Rows with '1' and blanks in Absenteeism Type Column\n",
         "df = df[df['Absenteeism Type'] != '1']\n",
-        "df = df[df['Absenteeism Type'] != '']\n",
         "\n",
         "# Step 6: Label Encode 'Reason Mapping' Column\n",
         "print(df.dtypes)\n",
         "\n",
+        "df = df.dropna()\n",
+        "\n",
         "label_encoder = LabelEncoder()\n",
-        "df['Encoded_Reason'] = label_encoder.fit_transform(df['Reason'])\n",
-        "df['Encoded_Absent_Present'] = label_encoder.fit_transform(df['Absent/Present'])\n",
-        "df['Encoded_Status'] = label_encoder.fit_transform(df['Status'])\n",
-        "df['Encoded_Absenteeism_Type'] = label_encoder.fit_transform(df['Absenteeism Type'])\n",
-        "df['Encoded_Shift'] = label_encoder.fit_transform(df['Shift'])\n",
+        "df['Encoded Reason'] = label_encoder.fit_transform(df['Reason'])\n",
+        "df['Encoded Absent/Present'] = label_encoder.fit_transform(df['Absent/Present'])\n",
+        "df['Encoded Status'] = label_encoder.fit_transform(df['Status'])\n",
+        "df['Encoded Absenteeism Type'] = label_encoder.fit_transform(df['Absenteeism Type'])\n",
+        "df['Encoded Shift'] = label_encoder.fit_transform(df['Shift'])\n",
         "print(\"Column names:\", df.columns)\n",
         "\n",
         "# Step 7: Create a Mapping Dictionary for Encoded Values and Original Reasons\n",
         "reason_mapping = {\n",
-        "    'Reason': dict(zip(df['Encoded_Reason'], df['Reason'])),\n",
-        "    'Absent_Present': dict(zip(df['Encoded_Absent_Present'], df['Absent/Present'])),\n",
-        "    'Status': dict(zip(df['Encoded_Status'], df['Status'])),\n",
-        "    'Absenteeism_Type': dict(zip(df['Encoded_Absenteeism_Type'], df['Absenteeism Type'])),\n",
-        "    'Shift': dict(zip(df['Encoded_Shift'], df['Shift']))\n",
+        "    'Reason': dict(zip(df['Encoded Reason'], df['Reason'])),\n",
+        "    'Absent_Present': dict(zip(df['Encoded Absent/Present'], df['Absent/Present'])),\n",
+        "    'Status': dict(zip(df['Encoded Status'], df['Status'])),\n",
+        "    'Absenteeism_Type': dict(zip(df['Encoded Absenteeism Type'], df['Absenteeism Type'])),\n",
+        "    'Shift': dict(zip(df['Encoded Shift'], df['Shift']))\n",
         "}\n",
         "\n",
         "# Step 8: Save the Mapping Dictionary to a Text File\n",
