--- a/EAPS_Data_Preprocess.ipynb
+++ b/EAPS_Data_Preprocess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlQESjIaKqS78nKs/EMEqL",
+      "authorship_tag": "ABX9TyM4mTcoatPJKaZ+jyAjz9vz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,33 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8m66y1zpQ4S0",
-        "outputId": "7268cabe-e583-4c27-dcfb-e6fd546081d9"
+        "outputId": "a861c823-543a-474e-bb48-9bd79c479f59"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "Date                datetime64[ns]\n",
-            "Shift                       object\n",
-            "Code                        object\n",
-            "Absenteeism Type            object\n",
-            "Status                      object\n",
-            "Leave Type                 float64\n",
-            "Absent/Present              object\n",
-            "Reason                      object\n",
-            "dtype: object\n",
-            "Column names: Index(['Date', 'Shift', 'Code', 'Absenteeism Type', 'Status', 'Leave Type',\n",
-            "       'Absent/Present', 'Reason', 'Encoded_Reason', 'Encoded_Absent_Present',\n",
-            "       'Encoded_Status', 'Encoded_Absenteeism_Type', 'Encoded_Shift'],\n",
-            "      dtype='object')\n",
+            "Mounted at /content/drive\n",
             "Done\n"
           ]
         }
@@ -65,60 +52,65 @@
         "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
         "from google.colab import drive\n",
         "\n",
-        "# Mount Google Drive\n",
+        "# Mounting the Google Drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "# Step 1: Read the Data\n",
-        "df = pd.read_excel('/content/drive/MyDrive/DSGP_COURSEWORK/SL Apparel Dataset model/SL Apparel Industry Dataset.xlsx')\n",
+        "# Reading the data from the excel file and removing blank spaces in each cell\n",
+        "df = pd.read_excel('/content/drive/MyDrive/DSGP_COURSEWORK/SL Apparel Dataset model/SL Apparel Industry Dataset.xlsx').apply(lambda x: x.str.strip() if x.dtype == \"object\" else x)\n",
         "\n",
+        "# Making the 'Absenteeism Type' considered as String\n",
         "df['Absenteeism Type'] = df['Absenteeism Type'].astype(str)\n",
         "\n",
-        "# Step 2: Filter Rows Based on Reasons\n",
-        "reasons_to_remove = ['Resignation', 'VOP', 'Funeral ', 'Funeral']\n",
+        "# Removing rows with 'Resignation', 'VOP', 'Funeral' from the 'Reason' colunm\n",
+        "reasons_to_remove = ['Resignation', 'VOP', 'Funeral']\n",
         "df = df[~df['Reason'].isin(reasons_to_remove)]\n",
         "\n",
-        "# Step 3: Remove Rows with Leave Type 0.5\n",
+        "# Removing rows where 'Leave Type' is 0.5\n",
         "df = df[df['Leave Type'] != 0.5]\n",
         "\n",
-        "# Step 4: Remove Department and Reason Mapping Columns\n",
+        "# Removing all the rows except for 'Shift A' and 'Shift B' in the 'Shift' colunm\n",
+        "df = df[df['Shift'] != 'A']\n",
+        "df = df[df['Shift'] != 'Shift']\n",
+        "df = df[df['Shift'] != 'Other Teams']\n",
+        "df = df[df['Shift'] != 'Shift e']\n",
+        "\n",
+        "# Removing 'Department' and 'Reason Mapping' columns\n",
         "df = df.drop(['Department', 'Reason Mapping'], axis=1)\n",
         "\n",
-        "# Step 5: Remove Rows with 'Present' in Absent/Present Column\n",
+        "# Removing rows where 'Absent/Present' is 'Present'\n",
         "df = df[df['Absent/Present'] != 'Present']\n",
-        "df = df[df['Absent/Present'] != '']\n",
         "\n",
-        "# Step 5: Remove Rows with '1' and blanks in Absenteeism Type Column\n",
+        "# Removing rows where 'Absenteeism Type' is 1\n",
         "df = df[df['Absenteeism Type'] != '1']\n",
-        "df = df[df['Absenteeism Type'] != '']\n",
         "\n",
-        "# Step 6: Label Encode 'Reason Mapping' Column\n",
-        "print(df.dtypes)\n",
+        "# Removing the rows if it has a blank cell in it\n",
+        "df = df.dropna()\n",
         "\n",
+        "# Using LabelEncoder to encode the values in columns\n",
         "label_encoder = LabelEncoder()\n",
-        "df['Encoded_Reason'] = label_encoder.fit_transform(df['Reason'])\n",
-        "df['Encoded_Absent_Present'] = label_encoder.fit_transform(df['Absent/Present'])\n",
-        "df['Encoded_Status'] = label_encoder.fit_transform(df['Status'])\n",
-        "df['Encoded_Absenteeism_Type'] = label_encoder.fit_transform(df['Absenteeism Type'])\n",
-        "df['Encoded_Shift'] = label_encoder.fit_transform(df['Shift'])\n",
-        "print(\"Column names:\", df.columns)\n",
+        "df['Encoded Reason'] = label_encoder.fit_transform(df['Reason'])\n",
+        "df['Encoded Absent/Present'] = label_encoder.fit_transform(df['Absent/Present'])\n",
+        "df['Encoded Status'] = label_encoder.fit_transform(df['Status'])\n",
+        "df['Encoded Absenteeism Type'] = label_encoder.fit_transform(df['Absenteeism Type'])\n",
+        "df['Encoded Shift'] = label_encoder.fit_transform(df['Shift'])\n",
         "\n",
-        "# Step 7: Create a Mapping Dictionary for Encoded Values and Original Reasons\n",
+        "# Creating a mapping dictionary with the original values for clear understanding\n",
         "reason_mapping = {\n",
-        "    'Reason': dict(zip(df['Encoded_Reason'], df['Reason'])),\n",
-        "    'Absent_Present': dict(zip(df['Encoded_Absent_Present'], df['Absent/Present'])),\n",
-        "    'Status': dict(zip(df['Encoded_Status'], df['Status'])),\n",
-        "    'Absenteeism_Type': dict(zip(df['Encoded_Absenteeism_Type'], df['Absenteeism Type'])),\n",
-        "    'Shift': dict(zip(df['Encoded_Shift'], df['Shift']))\n",
+        "    'Reason': dict(zip(df['Encoded Reason'], df['Reason'])),\n",
+        "    'Absent_Present': dict(zip(df['Encoded Absent/Present'], df['Absent/Present'])),\n",
+        "    'Status': dict(zip(df['Encoded Status'], df['Status'])),\n",
+        "    'Absenteeism_Type': dict(zip(df['Encoded Absenteeism Type'], df['Absenteeism Type'])),\n",
+        "    'Shift': dict(zip(df['Encoded Shift'], df['Shift']))\n",
         "}\n",
         "\n",
-        "# Step 8: Save the Mapping Dictionary to a Text File\n",
+        "# Saving the mapping dictionary to a text file\n",
         "with open('/content/drive/MyDrive/DSGP_COURSEWORK/SL Apparel Dataset model/reason_mapping.txt', 'w') as f:\n",
         "    for category, mappings in reason_mapping.items():\n",
         "        f.write(f\"{category}:\\n\")\n",
         "        for encoded_value, original_value in mappings.items():\n",
         "            f.write(f\"  {encoded_value}: {original_value}\\n\")\n",
         "\n",
-        "# Step 9: Save the Processed Data to a New Excel File\n",
+        "# Save the new preprocessed data to a text file in google drive\n",
         "df.to_excel('/content/drive/MyDrive/DSGP_COURSEWORK/SL Apparel Dataset model/preprocessed_data.xlsx', index=False)\n",
         "print(\"Done\")\n"
       ]
