Creating model and testing accuracy

--- a/RandomForestClassificationUpdated.ipynb
+++ b/RandomForestClassificationUpdated.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQv/DBrUnIKRFEm//TrEmx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +39,7 @@
         "id": "Im_o3IheOyxw",
         "outputId": "cd702ae8-dc2f-4956-bae7-9cd28f964c9d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "ewcu9VnDaY77",
         "colab": {
@@ -166,7 +165,7 @@
         "id": "7HufA-cQOxHY",
         "outputId": "91d985d7-c6bd-4c0d-ceb7-2155e8f5fe96"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +282,7 @@
       "metadata": {
         "id": "euxaNlRgO9tq"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +340,7 @@
       "metadata": {
         "id": "c6Viz2gXPABS"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -367,7 +366,7 @@
         "id": "yl-SQj32PIRn",
         "outputId": "f53a7dd5-a78b-42c0-aac7-4299618b2bc5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,9 +450,113 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "X_train.head()"
+      ],
       "metadata": {
         "id": "aat9Lo5UPuvH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -U imbalanced-learn"
+      ],
+      "metadata": {
+        "id": "ZFz1oW_Zt3yO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn. ensemble import RandomForestClassifier\n",
+        "rf_model = RandomForestClassifier(random_state=123)\n",
+        "rf_model.fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "id": "juK1eeqbt4yM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the file path where you want to save the RandomForestClassifier model\n",
+        "file_path = '/content/drive/MyDrive/Colab Notebooks/DSGP_COURSEWORK/SL Apparel Dataset model/Ranidu/rf_model.pkl'\n",
+        "\n",
+        "# Save the RandomForestClassifier model to the specified file path using pickle\n",
+        "with open(file_path, 'wb') as file:\n",
+        "    pickle.dump(rf_model, file)\n",
+        "\n",
+        "print(\"RandomForestClassifier model saved successfully.\")"
+      ],
+      "metadata": {
+        "id": "nRpPUjnat6v9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "\n",
+        "predictions_rf = rf_model.predict(X_test)\n",
+        "results_df = pd.DataFrame({'Actual': y_test, 'Predicted': predictions_rf})\n",
+        "accuracy = accuracy_score(y_test, predictions_rf)\n",
+        "\n",
+        "\n",
+        "print(\"Actual values and predictions:\")\n",
+        "print(results_df)\n",
+        "print(\"\\n\\nAccuracy of Predicted Classes:\", accuracy)"
+      ],
+      "metadata": {
+        "id": "gW4WO3EUt-nP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "# Generate classification report\n",
+        "class_report = classification_report(y_test, predictions_rf)\n",
+        "\n",
+        "# Print the classification report\n",
+        "print(\"Classification Report:\")\n",
+        "print(class_report)"
+      ],
+      "metadata": {
+        "id": "C3tHJBAzuCi1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "conf_matrix = confusion_matrix(y_test, predictions_rf)\n",
+        "# Plot confusion matrix\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "sns.heatmap(conf_matrix, annot=True, fmt='d', cmap='Blues', cbar=False)\n",
+        "plt.xlabel('Predicted')\n",
+        "plt.ylabel('Actual')\n",
+        "plt.title('Confusion Matrix')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "BssURtL3uEjg"
       },
       "execution_count": null,
       "outputs": []
