Confirmed that total absences is calculated only for the sewing team per month

--- a/ARIMA_and_SARIMA_for_Sewing.ipynb
+++ b/ARIMA_and_SARIMA_for_Sewing.ipynb
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "WdXFmRSopMMS"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,15 +80,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ap3Zbq2BpJaB",
-        "outputId": "78b97adb-32f1-4ef7-9031-844d1640df1a"
+        "outputId": "3e7de295-6ac7-41f7-8193-52175b9ed413"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -100,12 +100,12 @@
       ],
       "metadata": {
         "id": "xK3yjWASS6mA",
-        "outputId": "45f20625-9a83-45e4-b302-0a9d52b93ad8",
+        "outputId": "253ed3b9-4cb2-4fa5-c569-5964871ea932",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
             "       'DayOfWeek', 'Encoded Code', 'LeaveMonth', 'Encoded Reason',\n",
             "       'Encoded Status', 'Encoded Absenteeism Type', 'Encoded Shift',\n",
             "       'LeaveYear', 'NumOfLeaveDays', 'TookLeaveNextMonth', 'LeavesNextMonth',\n",
-            "       'TargetCategory', 'MainDepartment'],\n",
+            "       'TargetCategory'],\n",
             "      dtype='object')\n"
           ]
         }
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "uaf2Avf8lRBW"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -182,13 +182,13 @@
       ],
       "metadata": {
         "id": "_l3uYs4QRr3D",
-        "outputId": "6550d796-aadd-4b4c-ca6b-757709799d82",
+        "outputId": "39d9f4ff-060c-4332-af51-0195d60ed100",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,11 +241,11 @@
             "Sewing Team - 139A - I - BD            463\n",
             "Sewing Team - 105B - I - BD            436\n",
             "                                      ... \n",
-            "Sewing team 106 B - I - BD               1\n",
             "Sewing Team - 103A                       1\n",
-            "Sewing Team - 101A                       1\n",
             "Sewing Team - 134A                       1\n",
             "Sewing Team - 137A                       1\n",
+            "Sewing team 106 B - I - BD               1\n",
+            "Sewing team 107 A - I - BD               1\n",
             "Name: Department, Length: 261, dtype: int64\n"
           ]
         },
@@ -265,6 +265,10 @@
       "cell_type": "code",
       "source": [
         "# Summarize total absence by main department\n",
+        "\n",
+        "# Filter data for Sewing Team\n",
+        "sewing_team_data = data[data['MainDepartment'] == 'Sewing Team']\n",
+        "\n",
         "total_absence_by_main_dept = data.groupby(['LeaveYear','LeaveMonth','MainDepartment']).size().reset_index(name='totalAbsence')\n",
         "print(total_absence_by_main_dept)"
       ],
@@ -273,9 +277,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DpbyEev2gvCF",
-        "outputId": "ceca9dc7-789f-4c7d-80aa-281c65414a67"
+        "outputId": "6a7451e3-7ddc-45e2-9ca7-f3aac36f1598"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,7 +334,7 @@
         "id": "nePWDrL8lXoL",
         "outputId": "ce2d8604-2ba2-47c4-d4f8-84e73ffef2d7"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +380,7 @@
       "metadata": {
         "id": "dl-YcxfjldYq"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +544,7 @@
       "metadata": {
         "id": "oYkjCpLviywj"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -562,7 +566,7 @@
       "metadata": {
         "id": "E-R4lWeVmxQf"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -608,7 +612,7 @@
         "id": "L5S9zsyfm5Sv",
         "outputId": "5117a7f6-679e-4ab2-d581-c54cbcbf87f7"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -669,7 +673,7 @@
         "id": "BAh0EvexnGSR",
         "outputId": "085efc6e-03fd-4ced-f3e0-b1f41cf597e9"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,7 +715,7 @@
       "metadata": {
         "id": "4Kw6-rH9hReN"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -749,7 +753,7 @@
         "id": "RPeJFnBlnItt",
         "outputId": "620884bb-3d6f-4a42-b7ad-13da9ca5374d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
