train the model

--- a/CatboostClassificationModel.ipynb
+++ b/CatboostClassificationModel.ipynb
@@ -3282,6 +3282,87 @@
       "metadata": {
         "id": "4FXDKBLqE36X"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from catboost import CatBoostClassifier\n",
+        "\n",
+        "# Define and train the CatBoost model with proper parameters\n",
+        "model_catboost = CatBoostClassifier(iterations=1000, learning_rate=0.1, depth=6, loss_function='Logloss')\n",
+        "model_catboost.fit(X_train, Y_train)"
+      ],
+      "metadata": {
+        "id": "uPvU0-ZFqWn_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get predictions on the test set\n",
+        "predictions_catboost_training = model_catboost.predict(X_retrain)\n",
+        "\n",
+        "# Calculate accuracy on the test set\n",
+        "accuracy_catboost_train = accuracy_score(Y_retrain, predictions_catboost_training)\n",
+        "print(\"CatBoost Accuracy:\", accuracy_catboost_train)"
+      ],
+      "metadata": {
+        "id": "fQ-uIvwtqb8r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "check accuracy"
+      ],
+      "metadata": {
+        "id": "fpqLpB6Cqr6Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "# Get predictions on the test set\n",
+        "predictions_catboost = model_catboost.predict(X_test)\n",
+        "\n",
+        "# Calculate accuracy on the test set\n",
+        "accuracy_catboost = accuracy_score(Y_test, predictions_catboost)\n",
+        "print(\"CatBoost Accuracy:\", accuracy_catboost)"
+      ],
+      "metadata": {
+        "id": "88xkNFUxqjnf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "saving the model"
+      ],
+      "metadata": {
+        "id": "AjqClDUUqvA3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pickle\n",
+        "# Save the model\n",
+        "with open('/content/drive/MyDrive/DSGP_COURSEWORK/SL Apparel Dataset model/Models/Catboost_model_original.pkl', 'wb') as file:\n",
+        "    pickle.dump(model_catboost, file)"
+      ],
+      "metadata": {
+        "id": "SvMYxFrFqong"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
