Added Testing accuracy

--- a/LightGBMClassifier.ipynb
+++ b/LightGBMClassifier.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "authorship_tag": "ABX9TyM3c7qlDMHDNbDCNkgWljBT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -96,7 +97,7 @@
       "metadata": {
         "id": "xDgeGNDKfrXv"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -116,7 +117,7 @@
         "id": "Ojh2K0lRHUyZ",
         "outputId": "d9ce0cf2-bd21-43a6-c861-5645e398aaaf"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +138,7 @@
       "metadata": {
         "id": "g08jjSzgXSFd"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -150,7 +151,7 @@
       "metadata": {
         "id": "w9ONnlbWbbbE"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -165,7 +166,7 @@
         "id": "se_KP_ssvNbb",
         "outputId": "2534aa05-d943-40e4-81ec-0cfdffa74e2a"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -191,7 +192,7 @@
         "id": "ARLb0agkZGOG",
         "outputId": "fbcd941e-93db-4a2f-b1c7-746f21a6ae37"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +218,7 @@
         "id": "KV0RW9cryTpU",
         "outputId": "4200dbd0-7d0f-46e6-a161-15c63351c92d"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -243,7 +244,7 @@
         "id": "WTqoIJTlZJpG",
         "outputId": "f89c4203-eeac-4030-df46-575c998af6bf"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,7 +270,7 @@
         "id": "MfVnanjVZOHD",
         "outputId": "19437d42-c2e9-45b3-a5d1-e72ee00476d5"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +297,7 @@
         "id": "l-6UUyXJyWzP",
         "outputId": "d1ad4b82-d3a2-4a0e-e6a2-2a195d826190"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -752,7 +753,7 @@
       "metadata": {
         "id": "z6fK1OZsAISz"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -764,7 +765,7 @@
       "metadata": {
         "id": "D3PgFB0CX51K"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -776,7 +777,7 @@
       "metadata": {
         "id": "LNAiAFy6H-C_"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -788,7 +789,7 @@
       "metadata": {
         "id": "dte1RYe9YOAi"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -800,7 +801,7 @@
       "metadata": {
         "id": "TJpIoGacF3R5"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -812,7 +813,7 @@
       "metadata": {
         "id": "N3zLynj1ZbjH"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -837,7 +838,7 @@
         "id": "sycwsef0bSf7",
         "outputId": "4b84a5e8-ce55-411d-a0ad-6d8bb5c9244b"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -863,7 +864,7 @@
         "id": "MXC0S6VCdjAD",
         "outputId": "bb949e35-cc80-495b-93a2-01578947f195"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,7 +891,7 @@
         "id": "DfaGGrrIcQzb",
         "outputId": "a36cfcda-2425-47e8-bed7-721da7af6abf"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -989,7 +990,7 @@
         },
         "outputId": "9493520a-d70e-498c-8bcb-39dce7cd5c2c"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "error",
@@ -1055,7 +1056,7 @@
         "id": "qvjGJRJZ1wHt",
         "outputId": "6bdc351b-dc62-4400-ba95-852651caa86d"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,7 +1114,7 @@
         "id": "rqwG2NxdgTzG",
         "outputId": "94cd1485-1c3e-4d18-84d9-ca8f199299f3"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1576,7 +1577,7 @@
         "id": "p-SLv2CImdID",
         "outputId": "fa9c133a-6850-4dbb-eacf-45cb0f458661"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -2020,6 +2021,48 @@
       "metadata": {
         "id": "uCDNER6GolNU"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_pred = model_LGBM.predict(X_retrain)\n",
+        "\n",
+        "\n",
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "# Generate classification report\n",
+        "class_report = classification_report(Y_retrain, test_pred)\n",
+        "\n",
+        "# Print the classification report\n",
+        "print(\"Classification Report:\")\n",
+        "print(class_report)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Dn_nFE1-vUl8",
+        "outputId": "e89687ec-6fda-4a13-a06a-c6b14f5a705a"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           A       0.78      0.82      0.80     46923\n",
+            "           B       0.76      0.71      0.74     38167\n",
+            "\n",
+            "    accuracy                           0.77     85090\n",
+            "   macro avg       0.77      0.77      0.77     85090\n",
+            "weighted avg       0.77      0.77      0.77     85090\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
