--- a/ARIMA_and_SARIMA_for_Sewing.ipynb
+++ b/ARIMA_and_SARIMA_for_Sewing.ipynb
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "WdXFmRSopMMS"
       },
-      "execution_count": 182,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -75,7 +75,8 @@
         "drive.mount('/content/drive')\n",
         "\n",
         "# Load preprocessed data from Excel file\n",
-        "file_path = '/content/drive/MyDrive/DSGP_COURSEWORK/SL Apparel Dataset model/Dataset/preprocessed_data_new.xlsx'\n",
+        "# file_path = '/content/drive/MyDrive/DSGP_COURSEWORK/SL Apparel Dataset model/Dataset/preprocessed_data_new.xlsx'\n",
+        "file_path = '/content/drive/MyDrive/Colab Notebooks/DSGP_COURSEWORK/SL Apparel Dataset model/Dataset/preprocessed_data_new.xlsx'\n",
         "data = pd.read_excel(file_path)\n"
       ],
       "metadata": {
@@ -83,9 +84,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ap3Zbq2BpJaB",
-        "outputId": "51b3d934-1122-4406-8942-cffb7dafc1b9"
+        "outputId": "e5fabffb-c2d9-4892-c6de-2ed7420eb0d5"
       },
-      "execution_count": 183,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,12 +104,12 @@
       ],
       "metadata": {
         "id": "xK3yjWASS6mA",
-        "outputId": "edb597df-2a7b-41de-f9ec-da8d926a95f1",
+        "outputId": "dbb6284c-4353-4fc8-c8dd-de4f114c17c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 184,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +156,7 @@
       "metadata": {
         "id": "uaf2Avf8lRBW"
       },
-      "execution_count": 185,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -185,13 +186,13 @@
       ],
       "metadata": {
         "id": "_l3uYs4QRr3D",
-        "outputId": "b8351f20-ac01-40c0-8e98-c69927360299",
+        "outputId": "4c9c8b20-9d32-44af-d8c7-59cbb92da940",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
-      "execution_count": 186,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,11 +257,11 @@
             "Sewing Team - 139A - I - BD            463\n",
             "Sewing Team - 105B - I - BD            436\n",
             "                                      ... \n",
+            "Sewing team 106 B - I - BD               1\n",
             "Sewing Team - 103A                       1\n",
+            "Sewing Team - 101A                       1\n",
             "Sewing Team - 134A                       1\n",
             "Sewing Team - 137A                       1\n",
-            "Sewing team 106 B - I - BD               1\n",
-            "Sewing team 107 A - I - BD               1\n",
             "Name: count, Length: 261, dtype: int64\n"
           ]
         },
@@ -278,6 +279,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "g_iixK2a9Fcl"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# Summarize total absence by main department\n",
         "\n",
@@ -292,9 +302,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DpbyEev2gvCF",
-        "outputId": "d4150c7d-bc55-4dc1-fbee-7f0b9fc665b8"
+        "outputId": "5b94de8c-9cd9-4b0a-bb2c-bb75891e2ab1"
       },
-      "execution_count": 187,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,6 +343,30 @@
     {
       "cell_type": "code",
       "source": [
+        "employees = sewing_team_data['Encoded Code'].unique()\n",
+        "print(len(employees))"
+      ],
+      "metadata": {
+        "id": "Esn_f8kN9MDV",
+        "outputId": "0e3e491a-150a-40cb-f23b-6d5a79d01576",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3491\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Visualize the data\n",
         "plt.plot(total_absence_by_main_dept['totalAbsence'])\n",
         "plt.title('Total Absence by Main Department Over Time')\n",
@@ -349,7 +383,7 @@
         "id": "nePWDrL8lXoL",
         "outputId": "f6d3046a-9436-4ea7-e50f-8cb6cb58302f"
       },
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,7 +429,7 @@
       "metadata": {
         "id": "dl-YcxfjldYq"
       },
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -424,7 +458,7 @@
           "height": 472
         }
       },
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -456,7 +490,7 @@
           "height": 472
         }
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -489,7 +523,7 @@
       "metadata": {
         "id": "sxbNJhkNlww3"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -511,7 +545,7 @@
       "metadata": {
         "id": "NdYoLyLDl348"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -550,7 +584,7 @@
         "id": "RINxis0Wl-1J",
         "outputId": "3ebdb347-d4cf-4303-aef2-31779054b657"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,7 +665,7 @@
       "metadata": {
         "id": "oYkjCpLviywj"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -653,7 +687,7 @@
       "metadata": {
         "id": "E-R4lWeVmxQf"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -662,7 +696,7 @@
       "metadata": {
         "id": "SSPmp8izUF5N"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -699,7 +733,7 @@
         "id": "L5S9zsyfm5Sv",
         "outputId": "409cc7c2-def1-4faa-de4e-f2a8f9741d3a"
       },
-      "execution_count": 197,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -760,7 +794,7 @@
         "id": "BAh0EvexnGSR",
         "outputId": "8b6182e4-f0e9-4d7d-e7bd-88ddbe74694f"
       },
-      "execution_count": 198,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,7 +827,7 @@
       "metadata": {
         "id": "4Kw6-rH9hReN"
       },
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -831,7 +865,7 @@
         "id": "RPeJFnBlnItt",
         "outputId": "5da271aa-f1a3-41f5-ef37-cbfdc75c8009"
       },
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -985,7 +1019,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1046,7 +1080,7 @@
           "height": 564
         }
       },
-      "execution_count": 202,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
